m2 workqueuing and chunking changes
